--- a/style.css
+++ b/style.css
@@ -69,13 +69,49 @@ body {
   transform: rotate(-2deg) skew(4deg);
 }
 
+.screen {
+  position: relative;
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #151515cd;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  visibility: hidden;
+}
+
+.overlay.show {
+  visibility: visible;
+}
+
+.safe-area {
+  background-color: #f9f07a;
+  color: #172643;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  padding: 2rem;
+  box-sizing: border-box;
+  height: 250px;
+  width: 250px;
+  box-shadow: 0px 0px 2px 2px #f9f07a;
+}
+
 .button {
   box-sizing: border-box;
   padding: 0.7rem 1rem;
   border-radius: 13px;
   border: none;
-  font-size: 0.8rem;
-  box-shadow: 2px 3px 5px 4px #cdcccc, -3px 2px 2px 4px #828282;
+  font-size: 1.2rem;
+  background-color: #b7c9f2;
+  color: #fff;
+  box-shadow: 1px 3px 2px 4px #b7c9f2, -3px 2px 2px 4px #949fca;
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
@@ -84,13 +120,19 @@ body {
   width: 50px;
   border-radius: 50%;
   padding: 0.6rem;
+  font-size: 1.6rem;
 }
 
 .button.active {
-  box-shadow: 2px 3px 5px 4px #ff9393, -3px 2px 2px 4px #ff5050;
-  color: #ff9393;
-  outline: 2px solid #ff5050;
-  background-color: #ff5050;
+  box-shadow: 2px 3px 5px 4px #9195f6, -3px 2px 2px 4px #7163c8;
+  outline: 2px solid #9195f6;
+  background-color: #9195f6;
+}
+
+.button.reset {
+  box-shadow: 2px 3px 5px 4px #fb88b4, -3px 2px 2px 4px #e56da7;
+  outline: 2px solid #fb88b4;
+  background-color: #fb88b4;
 }
 
 .button:active {
@@ -143,13 +185,15 @@ body {
 .tools-container {
   display: flex;
   justify-content: space-evenly;
+  background-color: #f9f07a;
   align-items: center;
   box-sizing: border-box;
   width: 500px;
   padding: 1.2rem;
   margin: 2rem 0;
   border-radius: 10px;
-  box-shadow: 2px 3px 5px 4px #cdcccc, -3px 2px 2px 4px #828282;
+  box-shadow: 2px 3px 6px 4px #f9f07a, -3px 2px 2px 4px #e6ce63;
+  /* box-shadow: 2px 3px 5px 4px #cdcccc, -3px 2px 2px 4px #828282; */
 }
 
 .tools-container:first-child {
@@ -221,6 +265,12 @@ body {
 
   .button {
     font-size: 1rem;
+  }
+
+  .button.round {
+    width: 40px;
+    height: 40px;
+    margin: 0.8rem;
   }
 
   .container {
