--- a/style.css
+++ b/style.css
@@ -71,6 +71,9 @@ body {
 
 .screen {
   position: relative;
+  height: 500px;
+  width: 500px;
+  box-sizing: border-box;
 }
 
 .overlay {
@@ -80,27 +83,36 @@ body {
   width: 100%;
   height: 100%;
   background-color: #151515cd;
-  display: flex;
+  display: none;
   justify-content: center;
   align-items: center;
-  visibility: hidden;
 }
 
 .overlay.show {
-  visibility: visible;
+  display: flex;
 }
 
-.safe-area {
-  background-color: #f9f07a;
+.overlay .safe-area {
+  background-color: #262626;
   color: #172643;
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   flex-direction: column;
-  padding: 2rem;
+  padding: 2rem 2rem 1rem;
   box-sizing: border-box;
-  height: 250px;
-  width: 250px;
+  color: #f9f07a;
+  height: 90%;
+  width: 90%;
   box-shadow: 0px 0px 2px 2px #f9f07a;
+}
+
+.overlay .button-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 4rem;
 }
 
 .button {
@@ -108,11 +120,29 @@ body {
   padding: 0.7rem 1rem;
   border-radius: 13px;
   border: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   font-size: 1.2rem;
   background-color: #b7c9f2;
   color: #fff;
   box-shadow: 1px 3px 2px 4px #b7c9f2, -3px 2px 2px 4px #949fca;
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+.button-container .button {
+  box-sizing: border-box;
+  border: 2px solid #262626;
+  background-color: #f9f07a;
+  flex: 1 1;
+  color: #262626;
+  border-radius: 0;
+  box-shadow: none;
+}
+
+.button-container .button:active {
+  box-shadow: none;
+  transform: translate(0, 2px) scale(0.9);
 }
 
 .button.round {
@@ -243,6 +273,7 @@ body {
     margin-right: 0.7rem;
   }
 
+  .screen,
   .container {
     width: 400px;
     height: 400px;
@@ -273,6 +304,7 @@ body {
     margin: 0.8rem;
   }
 
+  .screen,
   .container {
     width: 350px;
     height: 350px;
@@ -289,6 +321,7 @@ body {
     margin-right: 0.7rem;
   }
 
+  .screen,
   .container {
     width: 300px;
     height: 300px;
